tests/valid_inputs/int_plus_equals_double.cpp
int main() {
	int i = 39;
	i += 3.14;
	return i;
}
