tests/invalid_inputs/sema/post_increment_double.cpp

int main() {
	double d = 3.14;
	d++;
}
